Fixing site styling and clipping of cards

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -8,8 +8,9 @@
   scroll-behavior:smooth;
 
   height: 800px;
-  padding: 80px 20px 20px;
-
+  max-width: 90%;
+  width: 75%;
+  padding: 80px 80px 20px 20px;
   border-radius: 2px;
 
   background-image: linear-gradient(to bottom, #1c204d3a, #1c204d00, #1c204d3a );
@@ -90,6 +91,10 @@ body {
   transform: translate(0,-60px);
   color: rgb(179, 179, 179);
   position: static;
+
+  width: 950px;
+  padding-right: 90px;
+  overflow-wrap: anywhere;
 }
 
 .blogcard {
@@ -98,7 +103,8 @@ body {
   
   padding-right: 20px;
   padding-top: 40px;
-  margin-bottom: 100px;;
+  margin-bottom: 100px;
+  width: 910px;;
 
   z-index: 1;
   
@@ -119,7 +125,8 @@ body {
   padding-top: 20px;
   padding-right: 20px;
 
-  height: 242px;
+  height: 260px;
+  width: 920px;
   border-style: solid;
   border-color: white;
 
