--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,7 +15,6 @@
 
   
   margin: 0 auto;
-  max-width: 75%;
 
 }
 
@@ -30,9 +29,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  min-width: 100vw;
   min-height: 100vh;
 }
 
